cmake_minimum_required(VERSION 3.28)
project(learn_sfml)

set(CMAKE_CXX_STANDARD 17)

add_executable(learn_sfml
        main.cpp
        T01_FrameRateMgmt.cpp
        T01_FrameRateMgmt.hpp
        T01_FrameRateMgmt.hpp
)

############# SFML #############
set(SFML_STATIC_LIBRARIES TRUE)
set(SFML_DIR C:/SFML-2.6.1/lib/cmake/SFML)
find_package(SFML COMPONENTS REQUIRED
        system
        window
        graphics
        audio
        network
)
target_link_libraries(learn_sfml
        sfml-system
        sfml-window
        sfml-graphics
        sfml-audio
        sfml-network
)
################################